@@ -22,7 +22,7 @@
     <title>Supported storage formats</title>
   </header>
   <body>
-  <p>HCatalog can read PigStorage, ULT (Yahoo proprietary) and RCFile formatted files. The input drivers for the formats are PigStorageInputDriver, ULTInputDriver and RCFileInputDriver respectively. HCatalog currently produces only RCFile formatted output. The output driver for the same is RCFileOutputDriver. </p>
+  <p>HCatalog can read PigStorage and RCFile formatted files. The input drivers for the formats are PigStorageInputDriver, ULTInputDriver and RCFileInputDriver respectively. HCatalog currently produces only RCFile formatted output. The output driver for the same is RCFileOutputDriver. </p>
 
 <p>Hive and HCatalog applications can interoperate (each can read the output of the other) as long as they use a common format. Currently, the only common format is RCFile.</p>
  </body>
